--- a/src/pages/Admin/admin.css
+++ b/src/pages/Admin/admin.css
@@ -1,227 +1,69 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #1d2634;
-  color: #9e9ea4;
-  font-family: 'Montserrat', sans-serif;
+.amain-container {
+  text-align: center;
 }
 
-.icon {
-  vertical-align: middle;
-  line-height: 1px;
-  font-size: 20px;
-}
-.icon_header {
-  vertical-align: middle;
-  line-height: 1px;
-  font-size: 26px;
-}
-.icon, .icon_header {
-  margin-right: 5px;
-}
 
-.close_icon {
-  color: red;
-  margin-left: 30px;
-  margin-top: 10px;
-  cursor: pointer;
-}
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 260px 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 3fr;
-  grid-template-areas:
-    'sidebar header header header'
-    'sidebar main main main';
-  height: 100vh;
-}
-
-/* Header  */
-.header {
-  grid-area: header;
-  height: 60px;
+.acard-container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 30px 0 30px;
-  box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
-}
-
-.menu-icon {
-  display: none;
-}
-/* End Header  */
-
-/* Sidebar  */
-#sidebar {
-  grid-area: sidebar;
-  height: 100%;
-  background-color: #263043;
-  overflow-y: auto;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
-
-.sidebar-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 30px 0px 30px;
-  margin-bottom: 30px;
-}
-
-.sidebar-title > span {
-  display: none;
-}
-
-.sidebar-brand {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.sidebar-list {
-  padding: 0;
-  list-style-type: none;
-}
-
-.sidebar-list-item {
-  padding: 20px 20px 20px 20px;
-  font-size: 18px;
-}
-
-.sidebar-list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-}
-
-.sidebar-list-item > a {
-  text-decoration: none;
-  color: #9e9ea4;
-}
-
-.sidebar-responsive {
-  display: inline !important;
-  position: absolute;
-  /*
-    we want the z-index of the sidebar higher so that
-    the charts are not showing over the sidebar 
-    on small screens
-  */
-  z-index: 12 !important;
-}
-
-/* End Sidebar  */
-
-
-/* Main  */  
-.main-container {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-}
-
-.main-title {
-  display: flex;
-  justify-content: space-between;
-}
-
-.main-cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 20px;
-  margin: 15px 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
-  padding: 8px 15px;
-  border-radius: 5px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
-.card:first-child {
-  background-color: #2962ff;
+.acard {
+  text-align: center;
+  border: 1px solid #070707 !important; 
+  width: 250px;
+  margin: 10px 0;
 }
 
-.card:nth-child(2) {
-  background-color: #ff6d00;
+.ausers-card {
+  background-color: #96e9eb !important; ;
 }
 
-.card:nth-child(3) {
-  background-color: #2e7d32;
+.adoctors-card {
+  background-color: #54d4bf !important; ;
 }
 
-.card:nth-child(4) {
-  background-color: #d50000;
+.aappointments-card {
+  background-color: #96e9eb !important; ;
 }
 
-.card-inner {
+.ausers-card,
+.adoctors-card,
+.aappointments-card {
+  font-weight: bold !important; 
+}
+
+.acharts {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
-.card-inner > .card_icon {
-  font-size: 25px;
+.achart-container {
+  width: 45%;
 }
 
-.charts {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin-top: 60px;
-  height: 300px;
+.areviews-container {
+  text-align: center;
+  margin-top: 20px;
 }
 
-/* End Main  */
-
-
-/* Medium <= 992px */
-  
-@media screen and (max-width: 992px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      'header'
-      'main';
-  }
-
-  #sidebar {
-    display: none;
-  }
-
-  .menu-icon {
-    display: inline;
-  }
-
-  .sidebar-title > span {
-    display: inline;
-  }
-}
-/* Small <= 768px */
-  
-@media screen and (max-width: 768px) {
-  .main-cards {
-    grid-template-columns: 1fr;
-    gap: 10px;
-    margin-bottom: 0;
-  }
-
-  .charts {
-    grid-template-columns: 1fr;
-    margin-top: 30px;
-  }
+.areviews-list {
+  list-style-type: none;
+  padding: 0;
 }
 
-/* Extra Small <= 576px */
+.adoctor-review {
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin: 10px 0;
+}
 
-@media screen and (max-width: 576px) {
-  .hedaer-left {
-    display: none;
-  }
+.adoctor-info {
+  margin-bottom: 10px;
 }
