--- a/src/components/Footer/footercss.css
+++ b/src/components/Footer/footercss.css
@@ -17,10 +17,12 @@ html, body {
   
   /* Sticky footer styles */
   footer {
-    position: sticky;
-    bottom: 0;
+    /* position: sticky;
+    bottom: 0; */
+    min-height:23px;
+     
     width: 100%;
-    background-color: #3498db; /* Change this color to match your design */
+    background-color: #000000; /* Change this color to match your design */
     color: white;
-    z-index: 1000; /* Ensure the footer is on top of other content */
+    z-index: 1000;
   }
